test/gpu/native/errors/gpuTrace.devel.nopoi.good
gpuTrace.chpl:10: In function 'main':
gpuTrace.chpl:12: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
std/MyMod.chpl:6: note: function is marked as not eligible for GPU execution
std/MyMod.chpl:9: note:   reached via call to 'doSomethingElse' here
gpuTrace.chpl:16: note:   reached via call to 'doSomething' in loop body here
